docs: add index (San, Mar 12, 2023 6:42 PM)
docs: fixed index

--- a/index.html
+++ b/index.html
@@ -1,70 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="#">
-    <title>cssBayan</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/argentum-sans" rel="stylesheet">
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="cssBayan/style.css">
+   <link rel="shortcut icon" href="#">
+   <title>cssBayan</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+   <link href="https://fonts.cdnfonts.com/css/argentum-sans" rel="stylesheet">
 
 </head>
-   <body>
-      <div class="wrapper">
-         <div class="container">
-            <div class="title">
-               <h1>CssBayan</h1>
-            </div>
-            <div class="ddown-menu">
-               <!-----------part1-->
-               <div class="ddown-item">
-               <label for="dd1" class="ddown-title">You can't just copy and past CSS</label>
-               <input class="ddown-input" type="radio" name="ddown" id="dd1"/>
-                  <div class="ddown-body">
-                     <img src="" alt="" class="image">
+
+<body>
+   <div class="wrapper">
+      <div class="container">
+         <div class="title">
+            <h1>CssBayan</h1>
+         </div>
+         <div class="ddown-menu">
+            <!-----------part1-->
+            <div class="ddown-item">
+               <input class="ddown-input" type="radio" name="ddown" id="dd1" />
+               <div class="label1"><label for="dd1" class="ddown-title">You can't just copy and past CSS </label><i
+                     class="ion ion-md-add"></i></div>
+
+               <div class="ddown-body">
+                  <img src="cssBayan/img/accordion.png" alt="" class="image">
                </div>
-               </div >
-               <!-----------part2-->
-               <div class="ddown-item">
-                  <label for="dd2" class="ddown-title">You can't just copy and past CSS</label>
-                  <input class="ddown-input" type="radio" name="ddown" id="dd2"/>
-                     <div class="ddown-body">
-                        <img src="" alt="" class="image">
-                  </div>
-                  </div >
-               <!-----------part3-->
-               <div class="ddown-item">
-                  <label for="dd3" class="ddown-title">You can't just copy and past CSS</label>
-                  <input class="ddown-input" type="radio" name="ddown" id="dd3"/>
-                     <div class="ddown-body">
-                        <img src="" alt="" class="image">
-                  </div>
-                  </div >
-               <!-----------part4-->
-               <div class="ddown-item">
-                  <label for="dd4" class="ddown-title" style="color: #000; ">You can't just copy and past CSS</label>
-                  <input class="ddown-input1" type="radio" name="ddown" id="dd4" checked="checked"/>
-                     <div class="ddown-body">
-                        <img src="" alt="" class="image">
-                  </div>
-                  </div >
-               <!-----------part5-->
-               <div class="ddown-item">
-                  <label for="dd5" class="ddown-title">You can't just copy and past CSS</label>
-                  <input class="ddown-input" type="radio" name="ddown" id="dd5" />
-                     <div class="ddown-body">
-                        <img src="" alt="" class="image">
-                  </div>
-                  </div >
+            </div>
+            <!-----------part2-->
+            <div class="ddown-item">
+               <input class="ddown-input" type="radio" name="ddown" id="dd2" />
+               <div class="label1"><label for="dd2" class="ddown-title">Relax and take it easy</label><i
+                     class="ion ion-md-add"></i></div>
+
+               <div class="ddown-body">
+                  <img src="cssBayan/img/accordion2.jpg" alt="" class="image">
+               </div>
+            </div>
+            <!-----------part3-->
+            <div class="ddown-item">
+               <input class="ddown-input" type="radio" name="ddown" id="dd3" />
+               <div class="label1"><label for="dd3" class="ddown-title">Keep calm and carry on</label><i
+                     class="ion ion-md-add"></i></div>
+
+               <div class="ddown-body">
+                  <img src="cssBayan/img/accordion3.jpg" alt="" class="image">
+               </div>
+            </div>
+            <!-----------part4-->
+            <div class="ddown-item">
+               <input class="ddown-input" type="radio" name="ddown" id="dd4" checked="checked" />
+               <div class="label1"><label for="dd4" class="ddown-title">Work-life balance</label><i
+                     class="ion ion-md-add"></i></div>
+
+               <div class="ddown-body">
+                  <img src="cssBayan/img/accordion4.png" alt="" class="image">
+               </div>
+            </div>
+            <!-----------part5-->
+            <div class="ddown-item">
+               <input class="ddown-input" type="radio" name="ddown" id="dd5" />
+               <div class="label1"><label for="dd5" class="ddown-title">Dude, where is JS? </label><i
+                     class="ion ion-md-add"></i></div>
+
+               <div class="ddown-body">
+                  <img src="cssBayan/img/accordion5.png" alt="" class="image">
+               </div>
             </div>
          </div>
       </div>
-         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-         <script src="js/slick.min.js"></script>
-         <script src="js/script.js"></script>
-   </body>
+   </div>
+   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+   <script src="js/slick.min.js"></script>
+   <script src="js/script.js"></script>
+</body>
+
 </html>
